// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@style: service methods checks * styling * custom appearance * stateless 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#2196F3",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "#2196F3",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * custom appearance * with state * explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#1E88E5",
  "borderRadius": 6,
  "borderWidth": 2,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#1E88E5",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "#1E88E5",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * custom appearance * with state * implicit (should apply from default appearance) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#2196F3",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "#2196F3",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * custom appearance * with variant * explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#4CAF50",
  "borderRadius": 6,
  "borderWidth": 2,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#4CAF50",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "#4CAF50",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * custom appearance * with variant * implicit (should apply from default appearance) 1`] = `
Object {
  "backgroundColor": "transparent",
  "borderColor": "#2196F3",
  "borderRadius": 6,
  "borderWidth": 2,
  "icon": Object {
    "height": 14,
    "marginHorizontal": 4.5,
    "tintColor": "#2196F3",
    "width": 14,
  },
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "text": Object {
    "color": "#2196F3",
    "fontSize": 13,
    "fontWeight": 800,
    "marginHorizontal": 4.5,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * stateless 1`] = `
Object {
  "backgroundColor": "#2196F3",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with state * multiple 1`] = `
Object {
  "backgroundColor": "#1E88E5",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with state * single 1`] = `
Object {
  "backgroundColor": "#1E88E5",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * no state 1`] = `
Object {
  "backgroundColor": "#4CAF50",
  "borderRadius": 6,
  "icon": Object {
    "height": 14,
    "marginHorizontal": 4.5,
    "tintColor": "#ffffff",
    "width": 14,
  },
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 13,
    "fontWeight": 800,
    "marginHorizontal": 4.5,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * with state * multiple 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "icon": Object {
    "height": 14,
    "marginHorizontal": 4.5,
    "tintColor": "#ffffff",
    "width": 14,
  },
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 13,
    "fontWeight": 800,
    "marginHorizontal": 4.5,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * multiple * with state * single 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "icon": Object {
    "height": 14,
    "marginHorizontal": 4.5,
    "tintColor": "#ffffff",
    "width": 14,
  },
  "minHeight": 30,
  "minWidth": 30,
  "padding": 4.5,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 13,
    "fontWeight": 800,
    "marginHorizontal": 4.5,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * no state 1`] = `
Object {
  "backgroundColor": "#4CAF50",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * multiple 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * single explicit (should apply own) 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * default appearance * with variant * single * with state * single implicit (should apply from appearance) 1`] = `
Object {
  "backgroundColor": "#43A047",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;

exports[`@style: service methods checks * styling * undefined appearance * stateless (should apply default appearance) 1`] = `
Object {
  "backgroundColor": "#2196F3",
  "borderRadius": 6,
  "icon": Object {
    "height": 13,
    "marginHorizontal": 4,
    "tintColor": "#ffffff",
    "width": 13,
  },
  "minHeight": 24,
  "minWidth": 24,
  "padding": 4,
  "text": Object {
    "color": "text-primary-inverse",
    "fontSize": 12,
    "fontWeight": 800,
    "marginHorizontal": 4,
  },
}
`;
